fix: scrollbar in board.html fixed

--- a/member/css/board/board-responsive.css
+++ b/member/css/board/board-responsive.css
@@ -1,4 +1,4 @@
-@media (max-width: 1352px) {
+@media (max-width: 1356px) {
   .task__list {
     min-height: 24px;
     max-width: 66vw;
